--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -4,5 +4,8 @@
         "work": "work",
         "about": "about",
         "contact": "contact"
+    },
+    "contact_page": {
+        "contact_data": "contact information"
     }
 }
