contact page updates

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -6,6 +6,8 @@
         "contact": "contact"
     },
     "contact_page": {
-        "contact_data": "contact information"
+        "contact_data": "contact information",
+        "description_first": "Whether you have a question, a project in mind, or you're interested in potential job opportunities — feel free to reach out. I'm always open to discussing new ideas, collaborations, or just connecting.",
+        "description_second": "Feel free to reach out via any of the methods listed below. I prioritize all inquiries and will respond as quickly as possible."
     }
 }
